
= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.6.18 (2015-04-24) =
* Fixed a bug that prevented Postie from detecting categories with an ampersand in them.
* Added support for "future" post status 

= 1.6.17 (2015-03-28) =
* Add a setting to attempt a user login based on the from address of the email if a matching Wordpress user exists.

= 1.6.16 (2015-03-17) =
* If using the #img# feature and you supply a caption it will be added to the attachment's alt text.

= 1.6.15 (2015-03-04) =
* Remove "Wrap content in pre tags" option as it was defaulted to "yes" but never correctly applied.
* Allow time correction values of 0.5
* New setting: "Treat Replies As" allows user to specify if replies should be processed as comments or new posts.
* Fix bug in reply detection
* Fix bug when saving custom image field and there was only 1 image

= 1.6.14 (2015-02-26) =
* Fully support custom taxonomies

= 1.6.13 (2015-02-25) =
* Add some additional checks and error messages to postie_media_handle_upload for cases where the TMP directory isn't writable.
* Any user with "Roles that can post" can now be the default poster.

= 1.6.12 (2015-02-09) =
* Fix confirmation emails that were always sending to administrator.
* Fix regression in 1.6.11 which prevented attachments from being displayed in some cases.

= 1.6.11 (2015-01-30) =
* Call wp_set_current_user() so that other WP functions that depend on the current user work correctly. (custom taxonomy)
* Only do image template processing if the preferred text type is plain
* Removed http_response_code() call since it is only supported by PHP 5.4 or newer.

= 1.6.10 (2015-1-2) =
* Testing against 4.1
* New icon in admin

= 1.6.9 (2014.12.1) =
* Post status list is now read from WordPress settings, rather than being a hard-coded list.
* Settings look & feel matching WP default style.
* Testing against WP 4.0.1
